[tool.poetry]
name = "loto"
version = "0.1.0"
description = "Having fun with lottery numbers"
authors = ["Jonathan Guitton"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.0"
colorama = "^0.4.1"
fbprophet = "^0.6"
jpype1 = "^1.3.0"
matplotlib = "^3.4"
numpy = "^1.16"
pandas = "^1.1.5"
pyfiglet = "^0.8.0"
python-dateutil = "^2.8"
requests = "^2.22"
scipy = "^1.3"
tqdm = "^4.32"

[tool.poetry.dev-dependencies]
pylint = "^2.3"
pytest = "^4.5"
hypothesis = "^4.23"
responses = "^0.13.3"
sphinx = "^4.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
